force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/Apttus_Billing__InvoiceRunResult__c.object-meta.xml
<CustomObject>
    <description>Shows the list of invoices created by an associated invoice run.</description>
    <label>Invoice Run Result</label>
    <nameField>
        <label>Invoice Run Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Run Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>