force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__AccountswithCreditMemosGenerated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AccountswithCreditMemosGenerated__c</fullName>
    <description>The number of accounts with Credit Memo(s) generated as result of this invoice run.</description>
    <inlineHelpText>The number of accounts with Credit Memo(s)  generated as result of this invoice run.</inlineHelpText>
    <label>Accounts with Credit Memos Generated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>