force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__AccountsWithoutInvoicesGenerated__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__AccountsWithoutInvoicesGenerated__c</fullName>
    <description>The number of accounts considered for this invoice run but no invoices generated.</description>
    <inlineHelpText>The number of accounts considered for this invoice run but no invoices generated.</inlineHelpText>
    <label>Accounts  Without Invoices Generated</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>