force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__InvoiceRunId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__InvoiceRunId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The associated Invoice Run Id.</description>
    <inlineHelpText>The associated Invoice Run Id.</inlineHelpText>
    <label>Invoice Run Id</label>
    <referenceTo>Apttus_Billing__InvoiceRun__c</referenceTo>
    <relationshipLabel>Invoice Run Results</relationshipLabel>
    <relationshipName>Invoice_Run_Results</relationshipName>
    <type>Lookup</type>
</CustomField>