force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__ScheduleJobId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__ScheduleJobId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The job Id of the associated Schedule Job.</description>
    <inlineHelpText>The job Id of the associated Schedule Job.</inlineHelpText>
    <label>Schedule Job Id</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>