force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TaxCallbackStatus__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TaxCallbackStatus__c</fullName>
    <description>Invoice callback status to denote the status of the callback Actions (Tax Calculation, Invoice Filter etc) on Invoice creation.</description>
    <inlineHelpText>Invoice callback status to denote the status of the callback Actions (Tax Calculation, Invoice Filter etc) on Invoice creation.</inlineHelpText>
    <label>Callback Status</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>