force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TotalAccountsSelected__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalAccountsSelected__c</fullName>
    <description>The total number of accounts included in this invoice run.</description>
    <inlineHelpText>The total number of accounts included in this invoice run.</inlineHelpText>
    <label>Total Accounts Selected</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>