force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TotalCreditMemosApplied__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalCreditMemosApplied__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number Credit Memos automatically applied to unpaid Invoices.</description>
    <inlineHelpText>The number Credit Memos automatically applied to unpaid Invoices created by the
Invoice Run.</inlineHelpText>
    <label>Total Credit Memos Applied</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>