force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TotalCreditMemosAutoApproved__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalCreditMemosAutoApproved__c</fullName>
    <description>The number of total Credit Memos auto approved as a result of this Invoice Run.</description>
    <inlineHelpText>The number of total Credit Memos auto approved as a result of this Invoice Run.</inlineHelpText>
    <label>Total Credit Memos Auto Approved</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>