force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TotalInvoicesCredited__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalInvoicesCredited__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of Invoices automatically paid down with Credit Memos.</description>
    <inlineHelpText>The number of Invoices automatically paid down with Credit Memos.</inlineHelpText>
    <label>Total Invoices Credited</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>