force-app/main/default/objects/Apttus_Billing__InvoiceRunResult__c/fields/Apttus_Billing__TotalInvoicesSupressed__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Billing__TotalInvoicesSupressed__c</fullName>
    <description>The number of total invoices suppressed as a result of this invoice run.</description>
    <inlineHelpText>The number of total invoices suppressed as a result of this invoice run.</inlineHelpText>
    <label>Total Invoices Supressed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>